# Investment-Dashboard-2

./: .env  .env.example  .gitignore  .importlinter  AGENTS.md  CLAUDE.md  CURRENT_STATE.md  README.md  data  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  toggle.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  post-merge-housekeeping.yml  update-context.yml
Claude Related/: CLAUDE.md  CLAUDE_PROJECT_INSTRUCTIONS.md
Documentation/: Investment_Panel_Dashboard_Phase1_Documentation.docx
app/: config.py  main.py
app/adapters/: _yfinance_client.py  company_factory.py  (+2 more)
data/: catalysts.json  isin_map.json  portfolio.json  portfolio.json.backup-phase1  portfolio.json.pre-tx-migration  thesis.json
docs/: AGENTS.md  ANALYTICS_DRAFT_HANDOFF.md  ARCHITECTURE.md  CODE_REVIEW_2026-06-02.md  COMPANY_DEEP_DIVE_HANDOFF.md  CONTEXT.md  LEARNING-GOALS.md  METHODOLOGY.md  PANEL_BRAINSTORM_HANDOFF.md  PROJECT_STATE.md  REDESIGN_DISCUSSION_HANDOFF.md  SESSION_LOG.md  STATE.md  VIVEK.md  WORKFLOW.md
investment_panel_dashboard.egg-info/: PKG-INFO  SOURCES.txt
scripts/: debug_gains.py  debug_years.py  gate.sh  migrate_to_transactions.py  recompute_tax_year.py  verify_data_integrity.py
tests/: conftest.py  test_fifo.py  test_history.py  test_repository.py  test_tax.py  test_ticker_search.py  test_transaction.py
tools/: README.md  _next_up.py  app_sandbox.sh  backfill_isin_from_csv.py  cleanup-worktrees.sh  doctor.sh  draft_ticket.sh  file.sh  finish_ticket.sh  gate.sh  import_scalable_csv.py  migrate_classification_to_isin_map.py  next.sh  regen_context.py  run.sh  setup_github.sh  start_ticket.sh  sync_state.py  ticket_workflow.py  update_backlog.py  update_state.py
(+450 files in other folders)
