[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investment-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.32",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "yfinance>=0.2",
    "requests>=2.31",
    "plotly>=5.19",
    "pandas>=2.2",
    "python-dotenv>=1.0",
    "streamlit-searchbox>=0.1.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "mypy>=1.9",
    "import-linter>=2.1",
    "types-requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: hits real network services",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = ["app.services.*", "app.adapters.*", "app.ports.*", "app.ui.*", "app.config"]
strict = false
ignore_errors = false

[[tool.mypy.overrides]]
module = ["streamlit.*", "yfinance.*", "plotly.*", "streamlit_searchbox.*"]
ignore_missing_imports = true
